Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8332406

[lworld] C2 compilation fails with meet not symmetric due to incorrect flat in array property

XMLWordPrintable

      java -XX:+ReplayCompiles -XX:+ReplayIgnoreInitErrors -XX:ReplayDataFile=replay_pid256800.log -jar netty-startup-1.23.jar

      === Meet Not Symmetric ===
      t = java/lang/Object:AnyNull * (flat in array),iid=top (inline_depth=InlineDepthTop)
      this= java/lang/Object:exact *,iid=top (inline_depth=InlineDepthTop)
      mt=(t meet this)= java/lang/Object:exact *,iid=top (inline_depth=InlineDepthTop)
      t_dual= java/lang/Object:NotNull * (flat in array)
      this_dual= java/lang/Object:exact *
      mt_dual= java/lang/Object:exact *
      mt_dual meet t_dual= java/lang/Object:NotNull *
      mt_dual meet this_dual= java/lang/Object:exact *
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S5838/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/9d8115cf-05f9-4fbf-95f2-3380232d1406/runs/6517f4d1-829f-4274-9e4e-6d2102105234/workspace/open/src/hotspot/share/opto/type.cpp:1033), pid=256800, tid=256817
      # fatal error: meet not symmetric
      #
      # JRE version: Java(TM) SE Runtime Environment (23.0+1) (fastdebug build 23-valhalla+1-21)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-valhalla+1-21, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x18a7ff7] Type::check_symmetrical(Type const*, Type const*, VerifyMeet const&) const+0x217

            chagedorn Christian Hagedorn
            thartmann Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated: