8332406: [lworld] C2: Turn flat in array property into proper lattice in type system to address remaining issues

Reviewed-by: thartmann