src/hotspot/share/ci/ciInstanceKlass.cpp
@@ -734,8 +734,9 @@ bool ciInstanceKlass::can_be_inline_klass(bool is_exact) {
   }
   if (!is_exact) {
     // Not exact, check if this is a valid super for an inline klass
-    VM_ENTRY_MARK;
-    return !get_instanceKlass()->access_flags().is_identity_class() || is_java_lang_Object() ;
+    GUARDED_VM_ENTRY(
+      return !get_instanceKlass()->access_flags().is_identity_class() || is_java_lang_Object();
+    )
   }
   return false;
 }
